Higher contrast links on front page, fix font sizes.

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -39,3 +39,7 @@ section {
     font-size: 42px;
     text-shadow: 1px 0 0 #fff, 0 -1px 0 #fff, 0 1px 0 #fff, -1px 0 0 #fff;
 }
+
+.purple-links a {
+    color: purple;
+}
